Added written explanations to explain code methods.

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,19 +19,7 @@
    },
    "source": [
     "### The Dataset\n",
-    "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season.\n",
-    "\n",
-    "## Methods & Results\n",
-    "describe in written English the methods you used to perform your analysis from beginning to end that narrates the code the does the analysis.\n",
-    "\n",
-    "- √ loads data from the original source on the web \n",
-    "- √ wrangles and cleans the data from it's original (downloaded) format to the format necessary for the planned analysis\n",
-    "- √ performs a summary of the data set that is relevant for exploratory data analysis related to the planned analysis \n",
-    "- √ creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis\n",
-    "- performs the data analysis (choosing k)\n",
-    "- creates a visualization of the analysis \n",
-    "\n",
-    "- !! note: all tables and figure should have a figure/table number and a legend"
+    "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season."
    ]
   },
   {
@@ -41,7 +29,8 @@
     "tags": []
    },
    "source": [
-    "### Loads data from the original source on the web"
+    "### Loads data from the original source on the web\n",
+    "We download the data from the internet, assign it to a local variable, and look at a preview."
    ]
   },
   {
@@ -199,7 +188,8 @@
    "id": "7816974b-58a7-4793-b9d2-71d728886197",
    "metadata": {},
    "source": [
-    "### Wrangles and cleans the data"
+    "### Wrangles and cleans the data\n",
+    "We change the column names of the dataframe to be \"code-friendly\", and we split our data into two sets, one for training and one for testing. We then select only the continuous variables (width, height, and diameter) and the label (whether the mushroom is poison or edible."
    ]
   },
   {
@@ -303,7 +293,8 @@
    "id": "62a40eb9-57be-4566-a244-7a47c6be83b5",
    "metadata": {},
    "source": [
-    "### A summary of the data set"
+    "### A summary of the data set\n",
+    "We preview how many mushrooms of each class are in our data, and what the average width, height, and diameter look like between the two classes."
    ]
   },
   {
@@ -483,7 +474,8 @@
    "id": "770a9b00-7456-47c9-aee3-72ad09662c58",
    "metadata": {},
    "source": [
-    "### Visualization of predictive (continuous) variables "
+    "### Visualization of predictive (continuous) variables \n",
+    "We plot the relative frequencies of width, height, and diameter between the classes, and make scatter plots of each combination to show what things our model could pick up on."
    ]
   },
   {
