unify the format, add discussion

--- a/project.ipynb
+++ b/project.ipynb
@@ -14,12 +14,19 @@
    "cell_type": "markdown",
    "id": "7a02d965-8338-421e-b395-e11927d1bbd2",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "### The Dataset\n",
     "\"Secondary mushroom data\" from UCI Machine Learning Repository (https://mushroom.mathematik.uni-marburg.de/files/) is used to answer the question. This dataset includes 61069 hypothetical mushrooms with caps based on 173 species (353 mushrooms per species). Each mushroom is identified as one of two classes: edible(e) and poisonous(p), and each observation of a mushroom contains 20 variables. Of the 20 variables, 3 are continuous, and 17 are nominal (3 binary, and 14 categorical). 18 of them are physical characteristics of the mushroom, and 2 are of the mushrooms' growing habitat and season."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8cd089c-f9f8-41e1-a7d0-0c61ee1294bb",
+   "metadata": {},
+   "source": [
+    "## Methods and Results"
    ]
   },
   {
@@ -35,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c06c5527-062d-43c2-975d-32157bfbd8c0",
    "metadata": {},
    "outputs": [
@@ -43,35 +50,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
-      "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m61069\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m21\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \";\"\n",
@@ -198,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "c225b949-cddb-453c-97a5-259aeecc86a9",
    "metadata": {},
    "outputs": [
@@ -303,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "2695ebae-250f-48ea-817b-708137508cfd",
    "metadata": {},
    "outputs": [
@@ -371,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "c4c801c3-9a1a-4419-b6aa-725a8ded2dd8",
    "metadata": {},
    "outputs": [
@@ -434,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "0f08ff86-7438-43a8-bbc8-9c2faabe7286",
    "metadata": {},
    "outputs": [
@@ -484,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "7287a1ed-5799-41c2-8c53-1cf6fb36a720",
    "metadata": {},
    "outputs": [
@@ -598,7 +576,7 @@
    "id": "c064ca34-47b6-478c-b380-13ec463255af",
    "metadata": {},
    "source": [
-    "## Analyzing and Selecting Predictor Variables\n",
+    "#### Analyzing and Selecting Predictor Variables\n",
     "- To select our predictor variables, we will tune the models and create distinct recipees for each set of predictor variables, and then compare the accuracy of the models.\n",
     "- We will set `neighbours` to `tune()` in our K-nn recipe in combination with a 5-fold cross validation so that each model that we compare will be at its optimal accuracy.\n",
     "    - Note that `k` values sued for the cross-validation will be values from \n",
@@ -610,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "4b000374-fdd9-4627-aa24-d0a7f9751457",
    "metadata": {},
    "outputs": [],
@@ -627,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "fe24a158-7c2a-466a-ad83-bb6257c4cea1",
    "metadata": {},
    "outputs": [],
@@ -650,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "0abd6f73-f3bb-4d77-a078-c6207a9d4bde",
    "metadata": {},
    "outputs": [],
@@ -673,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "d404f2fb-e6b6-49e6-a2c8-588b7d35f63b",
    "metadata": {},
    "outputs": [],
@@ -696,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "734d0c2c-c1f3-4094-83ba-0befec63f2f1",
    "metadata": {},
    "outputs": [
@@ -704,7 +682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Table: Resulting Accuracies of Different Predictor Variables\"\n"
+      "[1] \"Table 4.1: Resulting Accuracies of Different Predictor Variables\"\n"
      ]
     },
     {
@@ -762,7 +740,7 @@
     "acc_table<-tibble('Recipe Input'=character(), Accuracy = numeric()) |>\n",
     "add_row('Recipe Input' = model, Accuracy = accuracies)\n",
     "         \n",
-    "print(\"Table: Resulting Accuracies of Different Predictor Variables\")\n",
+    "print(\"Table 4.1: Resulting Accuracies of Different Predictor Variables\")\n",
     "acc_table"
    ]
   },
@@ -771,7 +749,7 @@
    "id": "37c311e8-7d56-4ef7-ad61-b5b09c9ba593",
    "metadata": {},
    "source": [
-    "## Finding the Optimal `k` value and Building the Final Model\n",
+    "#### Finding the Optimal `k` value and Building the Final Model\n",
     "- First, we will build new components that need to be updated for our final model.\n",
     "    - mainly, we need a new set of `k` values to test and a new workflow.\n",
     "- We will then tune our model with various `k` values, and pick the best one through a visualization."
@@ -779,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "30350f30-4f46-49f7-b13d-a983211e0383",
    "metadata": {},
    "outputs": [],
@@ -797,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "a2baa0f0-1676-4317-a67b-9be9f5237345",
    "metadata": {},
    "outputs": [
@@ -853,13 +831,13 @@
    "id": "aa46995a-684f-4eb2-b629-25231ed0e116",
    "metadata": {},
    "source": [
-    "## Building the Final Model\n",
+    "#### Building the Final Model\n",
     "* We will create a new model specification and a new workflow with our selected `k` value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "a2ef0ef8-eff8-4eb1-9a9e-16d80a13929c",
    "metadata": {},
    "outputs": [
@@ -918,13 +896,13 @@
    "id": "c89aef96-04dd-4bdd-8950-11959f53730a",
    "metadata": {},
    "source": [
-    "## 6 Evaluation of Model and Conclusion\n",
+    "### Evaluation of Model and Conclusion\n",
     "* Now, we will evaluate the model that we have created by fitting our testing set (`mushroom_testing`) with `mushroom_fit`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "2d4ea6e6-617e-41ef-8939-71ffce91177d",
    "metadata": {},
    "outputs": [
@@ -991,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "5eb376a8-700f-4907-8a45-7f5b760a6dc6",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "7db13b6d-7133-47b9-8bee-9393e79f628d",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1115,13 @@
     "\n",
     "Furthermore, our model could be difficult both to collect data for and to use because of the large number of features. Future data scientists might adjust our model to take images as input to make these easier. \n",
     "\n",
-    "Additionally, an improved model might use regression to predict a numerical value for a mushroom's toxicity to better represent its non-binary effects."
+    "Additionally, an improved model might use regression to predict a numerical value for a mushroom's toxicity to better represent its non-binary effects.\n",
+    "\n",
+    "Some questions about future research include:\n",
+    "\n",
+    "Can our model be generalized to predict other plant-based edibility?\n",
+    "How would our model react to the introduction of prognosis or geolocation data? On a more technical aspect:\n",
+    "How would using Principal Component Analysis (PCA) or Linear Discriminant Analysis (LDA) help improve the model if used with more variables?"
    ]
   },
   {
